Fixed some spacing on resume page

--- a/resume_style.css
+++ b/resume_style.css
@@ -8,7 +8,7 @@ body{
 
 .navbar {
     position: fixed;
-    left: 60%;
+    left: 65%;
     top: 50%;
     transform: translate(0%, -50%);
     background: grey;
